[gd_scene load_steps=9 format=2]

[ext_resource path="res://game/ui_elements/task_ui_base.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/assets/gas-pipes-gauges.png" type="Texture2D" id=2]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/assets/reductor-valve.png" type="Texture2D" id=3]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/assets/main-valve.png" type="Texture2D" id=4]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/assets/gauge-needle.png" type="Texture2D" id=5]
[ext_resource path="res://game/maps/chemlab/ui_elements/tasks/gas_valve_ui.gd" type="Script" id=6]

[sub_resource type="RectangleShape2D" id=1]
size = Vector2( 21, 173.5 )

[sub_resource type="CircleShape2D" id=2]
radius = 146.168

[node name="GasValveUi" instance=ExtResource( 1 )]
script = ExtResource( 6 )

[node name="Pipes" type="Sprite2D" parent="Control" index="0"]
texture = ExtResource( 2 )

[node name="MainValve" type="Area2D" parent="Control" index="1"]
position = Vector2( 476, 0 )
collision_layer = 2048
collision_mask = 2048

[node name="MainValve" type="Sprite2D" parent="Control/MainValve" index="0"]
texture = ExtResource( 4 )
offset = Vector2( 0, -200 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/MainValve" index="1"]
position = Vector2( 0, -248.5 )
shape = SubResource( 1 )

[node name="ReductorValve" type="Area2D" parent="Control" index="2"]
position = Vector2( -152, 0 )

[node name="ReductorValve" type="Sprite2D" parent="Control/ReductorValve" index="0"]
position = Vector2( 3, -5 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Control/ReductorValve" index="1"]
shape = SubResource( 2 )

[node name="HighPressureNeedle" type="Sprite2D" parent="Control" index="3"]
position = Vector2( 20, -259 )
rotation = 1.3439
texture = ExtResource( 5 )
offset = Vector2( 0, 30 )

[node name="LowPressureNeedle" type="Sprite2D" parent="Control" index="4"]
position = Vector2( -309, -264 )
rotation = 0.261799
texture = ExtResource( 5 )
offset = Vector2( 0, 30 )

[connection signal="input_event" from="Control/MainValve" to="." method="_on_MainValve_input_event"]
[connection signal="mouse_entered" from="Control/MainValve" to="." method="_on_MainValve_mouse_entered"]
[connection signal="mouse_exited" from="Control/MainValve" to="." method="_on_MainValve_mouse_exited"]
[connection signal="input_event" from="Control/ReductorValve" to="." method="_on_ReductorValve_input_event"]
[connection signal="mouse_entered" from="Control/ReductorValve" to="." method="_on_ReductorValve_mouse_entered"]
[connection signal="mouse_exited" from="Control/ReductorValve" to="." method="_on_ReductorValve_mouse_exited"]
